fix: prevent overflowed height

--- a/src/components/Image/Image.st.css
+++ b/src/components/Image/Image.st.css
@@ -57,7 +57,7 @@
 
 .root {
   display: grid;
-  min-height: 100%;
+  height: 100%;
 }
 
 .root.contain .image {
